removed italics to prevent choppiness on mobile font rendering

--- a/Styling/index-mobile.css
+++ b/Styling/index-mobile.css
@@ -36,7 +36,3 @@
     margin-top: 5vh;
     margin-bottom: 5vh;
 }
-
-#iText {
-    font-style: italic;
-}
