--- a/Styling/styling-mobile.css
+++ b/Styling/styling-mobile.css
@@ -1,7 +1,7 @@
 html {
     background: #181F24;
     overflow-y: visible;
-    font-family: "Trebuchet MS";
+    font-family: "Arial";
     text-align: center;
 }
 
